Fixed layout issues for mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,11 +4,17 @@
   }
 
 
-body {
+html, body {
     --lavande:  hsl(241, 100%, 89%);
     font-family: "Hanken Grotesk", sans-serif;
     text-align: center;
     background-color: hsla(220, 100%, 96%, 1);
+    display: flex;
+    /* flex-wrap: wrap; */
+    height: 100%;
+    width: 100%;
+    margin: 0;
+
 }
 
 .container {
@@ -16,15 +22,15 @@ body {
     /* flex-wrap: wrap; */
     /* flex-direction: column; */
     width: 100%;
-    height: 95vh;
+    /* height: 95vh; */
 }
 
 .component {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    width: 736px;
-    height: 512px;
+    /* width: 736px; */
+    /* height: 512px; */
     border-radius: 32px;
     margin: auto;
     background-color: white;
@@ -211,11 +217,12 @@ button:hover {
 .attribution a { color: hsl(228, 45%, 44%); }
 
 
-@media only screen and (max-width: 753px) {
+@media only screen and (max-width: 735px) {
 
     .component {
         margin: 0px;
     }
+
     .results {
         height: 356px;
         border-radius: 0px 0px 32px 32px;
@@ -225,6 +232,7 @@ button:hover {
         font-size: 18px;
         margin: 25px;
     }
+
     .round {
         width: 140px;
         height: 140px;
@@ -250,6 +258,26 @@ button:hover {
 
     #details {
         font-size: 16px;
+    }
 
+    .summary {
+        height: 453px;
+        }
+
+    h2 {
+        font-size: 18px;
+        margin: 20px 0px 15px 45px;
+    }
+
+    .list {
+        font-size: 16px;
+    }
+
+    button {
+        margin: 20px auto;
+    }
+
+    .attribution {
+        padding-bottom: 5px;
     }
 }
